sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
for i =[0,lgr-2]
	if(pluspetit(i+1:Int,i:Int):Boolean){
		echange(i:int,i+1:int)
	
		}
}
